--- a/user-service.properties
+++ b/user-service.properties
@@ -1,1 +1,7 @@
-service.name=user-service
+spring.application.name=user-service
+server.port=8001
+
+spring.jpa.show-sql=true
+spring.h2.console.enabled=true
+
+management.endpoints.web.exposure.include=refresh
