--- a/cart-service.properties
+++ b/cart-service.properties
@@ -1,1 +1,8 @@
-service.name=cart-service.properties
+
+spring.application.name=cart-service
+server.port=8003
+
+spring.jpa.show-sql=true
+spring.h2.console.enabled=true
+
+management.endpoints.web.exposure.include=refresh
