--- a/eureka-discovery-service.properties
+++ b/eureka-discovery-service.properties
@@ -1,5 +1,5 @@
 spring.application.name=eureka-discovery-service
-server.port=8012
+#server.port=8012
 
 spring.jpa.show-sql=true
 spring.h2.console.enabled=true
