--- a/user-service.properties
+++ b/user-service.properties
@@ -5,3 +5,10 @@ spring.jpa.show-sql=true
 spring.h2.console.enabled=true
 
 management.endpoints.web.exposure.include=refresh
+
+eureka:
+  client:
+  registerWithEureka: true
+  fetchRegistry: true
+  serviceUrl:
+    defaultZone: http://localhost:8012/eureka/
