--- a/user-service.properties
+++ b/user-service.properties
@@ -6,9 +6,6 @@ spring.h2.console.enabled=true
 
 management.endpoints.web.exposure.include=refresh
 
-eureka:
-  client:
-  registerWithEureka: true
-  fetchRegistry: true
-  serviceUrl:
-    defaultZone: http://localhost:8012/eureka/
+eureka.client.registerWithEureka=true
+eureka.client.fetchRegistry=true
+eureka.client.serviceUrl.defaultZone=http://localhost:8012/eureka/
