--- a/auth-service.properties
+++ b/auth-service.properties
@@ -1,6 +1,8 @@
 spring.application.name=auth-service
 server.port=8008
 
+jwt.secretkey=TheServerSecretKey
+
 spring.jpa.show-sql=true
 spring.h2.console.enabled=true
 
