--- a/product-service.properties
+++ b/product-service.properties
@@ -1,5 +1,5 @@
 spring.application.name=product-service
-server.port=8002
+server.port=${port:8002}
 
 spring.jpa.show-sql=true
 spring.h2.console.enabled=true
