--- a/product-service-dev.properties
+++ b/product-service-dev.properties
@@ -1,6 +1,6 @@
 
 spring.application.name=product-service
-server.port=8002
+server.port=${port:8051}
 
 spring.jpa.show-sql=true
 spring.h2.console.enabled=true
