--- a/auth-service.properties
+++ b/auth-service.properties
@@ -1,13 +1,29 @@
-spring.application.name=auth-service
-server.port=8008
+server
+  port: 8008
 
-jwt.secretkey=TheServerSecretKey
+spring:
+  application
+    name: auth-service
+  jpa:
+    show-sql: true
+  h2:
+    console:
+      enabled: true
 
-spring.jpa.show-sql=true
-spring.h2.console.enabled=true
+jwt:
+  secretkey: TheServerSecretKey
 
-management.endpoints.web.exposure.include=refresh
+management:
+  endpoints:
+    web:
+      exposure:
+        include: refresh
 
-eureka.client.registerWithEureka=true
-eureka.client.fetchRegistry=true
-eureka.client.serviceUrl.defaultZone=http://localhost:8012/eureka/
+eureka:
+  client:
+    registerWithEureka: true
+    fetchRegistry: true
+    serviceUrl:
+      defaultZone: http://localhost:8012/eureka/
+    healthcheck:
+      enabled: true
