--- a/product-service-dev.properties
+++ b/product-service-dev.properties
@@ -1,12 +1,30 @@
+server:
+  port: ${port:8051}
 
-spring.application.name=product-service
-server.port=${port:8051}
+spring:
+  application:
+    name: product-service
+  jpa:
+    show-sql: true
+  h2:
+    console:
+      enabled: true
 
-spring.jpa.show-sql=true
-spring.h2.console.enabled=true
+jwt:
+  secretkey: TheServerSecretKey
 
-management.endpoints.web.exposure.include=refresh
+management:
+  endpoints:
+    web:
+      exposure:
+        include: refresh
 
-eureka.client.registerWithEureka=true
-eureka.client.fetchRegistry=true
-eureka.client.serviceUrl.defaultZone=http://localhost:8012/eureka/
+eureka:
+  client:
+    registerWithEureka: true
+    fetchRegistry: true
+    serviceUrl:
+      defaultZone: http://localhost:8012/eureka/
+    healthcheck:
+      enabled: true
+
