--- a/cart-service.yaml
+++ b/cart-service.yaml
@@ -1,5 +1,5 @@
 server:
-  port: 8003
+  port: ${port:8003}
 
 spring:
   application:
@@ -24,6 +24,6 @@ eureka:
     registerWithEureka: true
     fetchRegistry: true
     serviceUrl:
-      defaultZone: http://localhost:8012/eureka/
+      defaultZone: $(EUREKA_SERVER:http://localhost:8012/eureka/}
     healthcheck:
       enabled: true
