--- a/order-service.yaml
+++ b/order-service.yaml
@@ -1,5 +1,5 @@
 server:
-  port: 8004
+  port: ${port:8004}
 
 spring:
   application:
@@ -24,7 +24,7 @@ eureka:
     registerWithEureka: true
     fetchRegistry: true
     serviceUrl:
-      defaultZone: http://localhost:8012/eureka/
+      defaultZone: $(EUREKA_SERVER:http://localhost:8012/eureka/}
     healthcheck:
       enabled: true
       
