--- a/product-service.yaml
+++ b/product-service.yaml
@@ -10,9 +10,6 @@ spring:
     console:
       enabled: true
 
-jwt:
-  secretkey: TheServerSecretKey
-
 management:
   endpoints:
     web:
@@ -24,6 +21,6 @@ eureka:
     registerWithEureka: true
     fetchRegistry: true
     serviceUrl:
-      defaultZone: http://localhost:8012/eureka/
+      defaultZone: $(EUREKA_SERVER:http://localhost:8012/eureka/}
     healthcheck:
       enabled: true
