--- a/user-service.yaml
+++ b/user-service.yaml
@@ -21,7 +21,7 @@ eureka:
     registerWithEureka: true
     fetchRegistry: true
     serviceUrl:
-      defaultZone: $(EUREKA_SERVER:http://localhost:8012/eureka/}
+      defaultZone: ${EUREKA_SERVER:http://localhost:8012/eureka/}
     healthcheck:
       enabled: true
 
