--- a/api-gateway-service.yaml
+++ b/api-gateway-service.yaml
@@ -34,7 +34,7 @@ spring:
         - id: product-service
           uri: lb://product-service
           predicates:
-          - Path=/externalGateway/api/*/products/**
+          - Path=/externalGateway/api/*/products
           filters:
           - StripPrefix=1
           - name: Retry
