--- a/order-service.yaml
+++ b/order-service.yaml
@@ -9,6 +9,26 @@ spring:
   h2:
     console:
       enabled: true
+  cloud:
+    config:
+      uri: ${CONFIG_SERVER:http://35.244.88.249:8011}
+  kafka:
+    consumer:
+      bootstrap-servers: ${KAFKA_SERVER:35.244.88.249:9072}
+      group-id: group_id
+      auto-offset-reset: latest
+      enable-auto-commit: false
+      key-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+      value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
+      properties:
+        spring:
+          json:
+            trusted:
+              packages: com.scshop.orders.orderservice.entity
+    producer:
+      bootstrap-servers: ${KAFKA_SERVER:35.244.88.249:9072}
+      key-serializer: org.springframework.kafka.support.serializer.JsonSerializer
+      value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
 
 management:
   endpoints:
@@ -21,11 +41,13 @@ eureka:
     registerWithEureka: true
     fetchRegistry: true
     serviceUrl:
-      defaultZone: ${EUREKA_SERVER:http://localhost:8012/eureka/}
+      defaultZone: ${EUREKA_SERVER:http://35.244.88.249:8012/eureka/}
     healthcheck:
       enabled: true
-      
+
+
 app:
   order:
-    shipping:
-      standard-charges: 20
+    kafka:
+      topic: 
+        order-topic: order_topic
