--- a/order-service.yaml
+++ b/order-service.yaml
@@ -15,7 +15,7 @@ spring:
   kafka:
     consumer:
       bootstrap-servers: ${KAFKA_SERVER:localhost:9072}
-      group-id: group_id
+      group-id: order_group
       auto-offset-reset: latest
       enable-auto-commit: false
       key-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
