--- a/payment-service.yaml
+++ b/payment-service.yaml
@@ -17,7 +17,7 @@ spring:
       bootstrap-servers: ${KAFKA_SERVER:localhost:9072}
       group-id: payment_group
       auto-offset-reset: earliest
-      enable-auto-commit: false
+      enable-auto-commit: true
       key-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
       value-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
       properties:
