--- a/product-service.yaml
+++ b/product-service.yaml
@@ -16,6 +16,7 @@ spring:
     consumer:
       bootstrap-servers: ${KAFKA_SERVER:localhost:9072}
       group-id: product_group
+      client-id: product_group1
       auto-offset-reset: earliest
       enable-auto-commit: false
       key-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
