--- a/order-service.yaml
+++ b/order-service.yaml
@@ -27,6 +27,7 @@ spring:
             trusted:
               packages: "*"
     producer:
+      acks: all
       bootstrap-servers: ${KAFKA_SERVER:localhost:9072}
       key-serializer: org.springframework.kafka.support.serializer.JsonSerializer
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
