--- a/payment-service.yaml
+++ b/payment-service.yaml
@@ -15,8 +15,8 @@ spring:
   kafka:
     consumer:
       bootstrap-servers: ${KAFKA_SERVER:localhost:9072}
-      group-id: payment_group
-      client-id: payment_group1
+      group-id: payment_group2
+      client-id: payment_group2
       auto-offset-reset: earliest
       enable-auto-commit: true
       key-deserializer: org.springframework.kafka.support.serializer.JsonDeserializer
