--- a/api-gateway-service.yaml
+++ b/api-gateway-service.yaml
@@ -20,7 +20,7 @@ spring:
       globalcors:
         corsConfigurations:
           '[/**]':
-            allowedOrigins: "http://sushantc.com/,http://35.189.38.162/,http://35.189.38.162:8000/,http://sushantc.com:8000/"
+            allowedOrigins: "*"
             allowedHeaders:
               - content-type
             allowedMethods:
@@ -32,6 +32,10 @@ spring:
           enabled: true
           lower-case-service-id: true
       routes:
+        - id: dedupe_response_header_route
+          uri: "*"
+          filters:
+            - DedupeResponseHeader=Access-Control-Allow-Credentials Access-Control-Allow-Origin
         - id: auth-service
           uri: lb://auth-service
           predicates:
