--- a/api-gateway-service.yaml
+++ b/api-gateway-service.yaml
@@ -10,6 +10,17 @@ management:
 spring:
   application:
     name: api-gateway-service
+  spring:
+  security:
+    oauth2:
+      client:
+        provider:
+          keycloak:
+            issuer-uri: http://localhost:7999/auth/realms/sc-shop
+        registration:
+          keycloak:
+            client-id: spring-cloud-gateway-client
+            client-secret: 58b06d2c-c33a-41ec-82f0-9e6222e4eed3
   cloud:
     config:
         uri: ${CONFIG_SERVER:http://localhost:8011}
