--- a/api-gateway-service.yaml
+++ b/api-gateway-service.yaml
@@ -27,6 +27,8 @@ spring:
       ribbon:
         enabled: false
     gateway:
+      default-filters:
+        - TokenRelay
       globalcors:
         corsConfigurations:
           '[/**]':
