--- a/api-gateway-service.yaml
+++ b/api-gateway-service.yaml
@@ -20,6 +20,9 @@ spring:
           keycloak:
             client-id: spring-cloud-gateway-client
             client-secret: 58b06d2c-c33a-41ec-82f0-9e6222e4eed3
+            grant-type: urn:ietf:params:oauth:grant-type:token-exchange
+            subject-token-type: urn:ietf:params:oauth:token-type:access_token
+            
   cloud:
     config:
         uri: ${CONFIG_SERVER:http://localhost:8011}
