--- a/api-gateway-service.yaml
+++ b/api-gateway-service.yaml
@@ -15,14 +15,11 @@ spring:
       client:
         provider:
           keycloak:
-            issuer-uri: http://localhost:7999/auth/realms/sc-shop
+            issuer-uri: ${ISSUER_URI:http://localhost:7999/auth/realms/sc-shop}
         registration:
           keycloak:
             client-id: spring-cloud-gateway-client
             client-secret: 58b06d2c-c33a-41ec-82f0-9e6222e4eed3
-            grant-type: urn:ietf:params:oauth:grant-type:token-exchange
-            subject-token-type: urn:ietf:params:oauth:token-type:access_token
-            
   cloud:
     config:
         uri: ${CONFIG_SERVER:http://localhost:8011}
