--- a/api-gateway-service.yaml
+++ b/api-gateway-service.yaml
@@ -20,7 +20,7 @@ spring:
           keycloak:
             client-id: spring-cloud-gateway-client
             client-secret: 58b06d2c-c33a-41ec-82f0-9e6222e4eed3
-            scope: openid, email
+            scope: openid,profile,email
   cloud:
     config:
         uri: ${CONFIG_SERVER:http://localhost:8011}
