--- a/order-service.yaml
+++ b/order-service.yaml
@@ -16,7 +16,7 @@ spring:
           keycloak:
             issuer-uri: ${ISSUER_URI:http://localhost:7999/auth/realms/sc-shop}
         registration:
-          keycloak:
+          order-service:
             client-id: order-service
             client-secret: ae2b3843-edfe-48c0-9f08-26a3ffa8a5b9
             authorization-grant-type: client_credentials
