--- a/order-service.yaml
+++ b/order-service.yaml
@@ -17,6 +17,7 @@ spring:
             issuer-uri: ${ISSUER_URI:http://localhost:7999/auth/realms/sc-shop}
         registration:
           order-service:
+            provider: keycloak
             client-id: order-service
             client-secret: ae2b3843-edfe-48c0-9f08-26a3ffa8a5b9
             authorization-grant-type: client_credentials
