--- a/order-service.yaml
+++ b/order-service.yaml
@@ -11,6 +11,9 @@ spring:
       enabled: true
   security:
     oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: ${ISSUER_URI:http://localhost:7999/auth/realms/sc-shop}
       client:
         provider:
           keycloak:
@@ -20,6 +23,7 @@ spring:
             provider: keycloak
             client-id: order-service
             client-secret: ae2b3843-edfe-48c0-9f08-26a3ffa8a5b9
+            authorization-grant-type: client_credentials
             scope: product
   cloud:
     config:
