--- a/product-service.yaml
+++ b/product-service.yaml
@@ -4,14 +4,25 @@ server:
 spring:
   application:
     name: product-service
+  datasource:
+    url: ${DB_URL:jdbc:postgresql://localhost:5002/product}
+    username: product
+    password: product
   jpa:
     show-sql: true
-  h2:
-    console:
-      enabled: true
+    properties:
+      hibernate:
+        dialect: org.hibernate.dialect.PostgreSQLDialect
+#    hibernate:
+#      ddl-auto: create
   cloud:
     config:
       uri: ${CONFIG_SERVER:http://localhost:8011}
+  security:
+    oauth2:
+      resourceserver:
+        jwt:
+          issuer-uri: ${ISSUER_URI:http://localhost:7999/auth/realms/sc-shop}
   kafka:
     consumer:
       bootstrap-servers: ${KAFKA_SERVER:localhost:9072}
@@ -29,11 +40,7 @@ spring:
       bootstrap-servers: ${KAFKA_SERVER:localhost:9072}
       key-serializer: org.springframework.kafka.support.serializer.JsonSerializer
       value-serializer: org.springframework.kafka.support.serializer.JsonSerializer
-  security:
-    oauth2:
-      resourceserver:
-        jwt:
-          issuer-uri: ${ISSUER_URI:http://localhost:7999/auth/realms/sc-shop}
+
 management:
   endpoints:
     web:
